menu tweak to avoid menu items overflowing during pre-built scripted animation (CSS transitions okay). now performance with many system fonts fine (in style options)

--- a/src/electron/renderer/index.css
+++ b/src/electron/renderer/index.css
@@ -251,6 +251,19 @@ form {
 .tabPanel.active {
   display: block;
 }
+/* .mdc-simple-menu,
+.mdc-simple-menu--animating,
+.mdc-simple-menu--animating .mdc-simple-menu__items > *,
+.mdc-list,
+.mdc-list-item,
+.mdc-list-item::before,
+.mdc-select,
+.mdc-select__selected-text {
+  transition: all 0s ease 0s !important;
+} */
+.mdc-simple-menu {
+  overflow: hidden;
+}
 /* #nav-select */
 .mdc-select {
   width: 100% !important;
